--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
+
+    // GSON AC06
+    implementation 'com.google.code.gson:gson:2.8.5'
+
+    //okhttp
+    implementation 'com.squareup.okhttp3:okhttp:3.8.0'
 }
