--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
@@ -40,4 +42,12 @@ dependencies {
 
     //okhttp
     implementation 'com.squareup.okhttp3:okhttp:3.8.0'
+
+
+    //Room components
+    implementation "androidx.room:room-runtime:2.2.0-rc01"
+    kapt "androidx.room:room-compiler:2.2.0-rc01"
+    androidTestImplementation "androidx.room:room-testing:2.2.0-rc01"
+
+
 }
